--- a/src/app/audio/audio.component.css
+++ b/src/app/audio/audio.component.css
@@ -37,6 +37,7 @@ button {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s ease;
     text-align: center;
+    margin-top: 10px;
 }
 
 .record-btn {
